# libs/py-sdk/diabetes_sdk/api/history_api.py
@@ -17,7 +17,7 @@ from typing import Any, Dict, List, Optional, Tuple, Union
 from typing_extensions import Annotated
 
 from pydantic import StrictStr
-from typing import Dict, List, Optional
+from typing import Dict, List
 from diabetes_sdk.models.history_record_schema_input import HistoryRecordSchemaInput
 from diabetes_sdk.models.history_record_schema_output import HistoryRecordSchemaOutput
 
@@ -42,7 +42,6 @@ class HistoryApi:
     @validate_call
     def history_get(
         self,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -60,8 +59,6 @@ class HistoryApi:
 
         Return history records for the authenticated user.
 
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -85,7 +82,6 @@ class HistoryApi:
         """ # noqa: E501
 
         _param = self._history_get_serialize(
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -110,7 +106,6 @@ class HistoryApi:
     @validate_call
     def history_get_with_http_info(
         self,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -128,8 +123,6 @@ class HistoryApi:
 
         Return history records for the authenticated user.
 
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -153,7 +146,6 @@ class HistoryApi:
         """ # noqa: E501
 
         _param = self._history_get_serialize(
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -178,7 +170,6 @@ class HistoryApi:
     @validate_call
     def history_get_without_preload_content(
         self,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -196,8 +187,6 @@ class HistoryApi:
 
         Return history records for the authenticated user.
 
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -221,7 +210,6 @@ class HistoryApi:
         """ # noqa: E501
 
         _param = self._history_get_serialize(
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -241,7 +229,6 @@ class HistoryApi:
 
     def _history_get_serialize(
         self,
-        x_telegram_init_data,
         _request_auth,
         _content_type,
         _headers,
@@ -265,8 +252,6 @@ class HistoryApi:
         # process the path parameters
         # process the query parameters
         # process the header parameters
-        if x_telegram_init_data is not None:
-            _header_params['X-Telegram-Init-Data'] = x_telegram_init_data
         # process the form parameters
         # process the body parameter
 
@@ -282,6 +267,7 @@ class HistoryApi:
 
         # authentication setting
         _auth_settings: List[str] = [
+            'TelegramInitData'
         ]
 
         return self.api_client.param_serialize(
@@ -306,7 +292,6 @@ class HistoryApi:
     def history_id_delete(
         self,
         id: StrictStr,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -326,8 +311,6 @@ class HistoryApi:
 
         :param id: (required)
         :type id: str
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -352,7 +335,6 @@ class HistoryApi:
 
         _param = self._history_id_delete_serialize(
             id=id,
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -378,7 +360,6 @@ class HistoryApi:
     def history_id_delete_with_http_info(
         self,
         id: StrictStr,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -398,8 +379,6 @@ class HistoryApi:
 
         :param id: (required)
         :type id: str
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -424,7 +403,6 @@ class HistoryApi:
 
         _param = self._history_id_delete_serialize(
             id=id,
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -450,7 +428,6 @@ class HistoryApi:
     def history_id_delete_without_preload_content(
         self,
         id: StrictStr,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -470,8 +447,6 @@ class HistoryApi:
 
         :param id: (required)
         :type id: str
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -496,7 +471,6 @@ class HistoryApi:
 
         _param = self._history_id_delete_serialize(
             id=id,
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -517,7 +491,6 @@ class HistoryApi:
     def _history_id_delete_serialize(
         self,
         id,
-        x_telegram_init_data,
         _request_auth,
         _content_type,
         _headers,
@@ -543,8 +516,6 @@ class HistoryApi:
             _path_params['id'] = id
         # process the query parameters
         # process the header parameters
-        if x_telegram_init_data is not None:
-            _header_params['X-Telegram-Init-Data'] = x_telegram_init_data
         # process the form parameters
         # process the body parameter
 
@@ -560,6 +531,7 @@ class HistoryApi:
 
         # authentication setting
         _auth_settings: List[str] = [
+            'TelegramInitData'
         ]
 
         return self.api_client.param_serialize(
@@ -584,7 +556,6 @@ class HistoryApi:
     def history_post(
         self,
         history_record_schema_input: HistoryRecordSchemaInput,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -604,8 +575,6 @@ class HistoryApi:
 
         :param history_record_schema_input: (required)
         :type history_record_schema_input: HistoryRecordSchemaInput
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -630,7 +599,6 @@ class HistoryApi:
 
         _param = self._history_post_serialize(
             history_record_schema_input=history_record_schema_input,
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -656,7 +624,6 @@ class HistoryApi:
     def history_post_with_http_info(
         self,
         history_record_schema_input: HistoryRecordSchemaInput,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -676,8 +643,6 @@ class HistoryApi:
 
         :param history_record_schema_input: (required)
         :type history_record_schema_input: HistoryRecordSchemaInput
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -702,7 +667,6 @@ class HistoryApi:
 
         _param = self._history_post_serialize(
             history_record_schema_input=history_record_schema_input,
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -728,7 +692,6 @@ class HistoryApi:
     def history_post_without_preload_content(
         self,
         history_record_schema_input: HistoryRecordSchemaInput,
-        x_telegram_init_data: Optional[StrictStr] = None,
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -748,8 +711,6 @@ class HistoryApi:
 
         :param history_record_schema_input: (required)
         :type history_record_schema_input: HistoryRecordSchemaInput
-        :param x_telegram_init_data:
-        :type x_telegram_init_data: str
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -774,7 +735,6 @@ class HistoryApi:
 
         _param = self._history_post_serialize(
             history_record_schema_input=history_record_schema_input,
-            x_telegram_init_data=x_telegram_init_data,
             _request_auth=_request_auth,
             _content_type=_content_type,
             _headers=_headers,
@@ -795,7 +755,6 @@ class HistoryApi:
     def _history_post_serialize(
         self,
         history_record_schema_input,
-        x_telegram_init_data,
         _request_auth,
         _content_type,
         _headers,
@@ -819,8 +778,6 @@ class HistoryApi:
         # process the path parameters
         # process the query parameters
         # process the header parameters
-        if x_telegram_init_data is not None:
-            _header_params['X-Telegram-Init-Data'] = x_telegram_init_data
         # process the form parameters
         # process the body parameter
         if history_record_schema_input is not None:
@@ -851,6 +808,7 @@ class HistoryApi:
 
         # authentication setting
         _auth_settings: List[str] = [
+            'TelegramInitData'
         ]
 
         return self.api_client.param_serialize(
